tdf#150170: Revert "flatten TableType in ColumnSpanSet"

This reverts commit 99cd1d8834bb708afc81c825ff2b7992b7acb37d.

This commit is only reverted in libreoffice-7-3 branch.
In master and libreoffice-7-4 the issue is not reproducible
after the default Calc number of columns was increased to 16384

Change-Id: I28dcc1c56c803d49ea101dbb0ace7085f7a78820
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138445
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>