sc/inc/columnspanset.hxx
@@ -11,7 +11,6 @@
 
 #include "address.hxx"
 
-#include <optional>
 #include <vector>
 #include <mdds/flat_segment_tree.hpp>
 
@@ -60,7 +59,7 @@ private:
         ColumnType(SCROW nStart, SCROW nEnd, bool bInit);
     };
 
-    typedef std::vector<std::optional<ColumnType>> TableType;
+    typedef std::vector<std::unique_ptr<ColumnType>> TableType;
 
     std::vector<TableType> maTables;
 
